test/soft-contract/ill-typed/argmin.caprice
(* TEST
  include refutable;
*)

let is_cons xs =
  match xs with
  | _ :: _ -> true
  | _ -> false
  end

let min x y =
  if x < y then x else y

let rec argmin (type a) (f : a -> int) (xs : list a | is_cons xs) : a =
  match xs with
  | x :: [] -> f x (* ERROR: returns int, not a *)
  | x :: rest -> min (f x) (argmin a f rest)
  end
